Fix #89 tag on PC

--- a/Styles/_media.desktop.scss
+++ b/Styles/_media.desktop.scss
@@ -792,6 +792,12 @@ a.author:hover
     padding-bottom: 7pt;
 }
 
+.os-win.hi-dpi .tag
+{
+    padding-top: 5pt;
+    padding-bottom: 7pt;
+}
+
 .tag:before
 {
     content: "";
