Tweak small font spacing on PC

--- a/Styles/_shared.scss
+++ b/Styles/_shared.scss
@@ -71,7 +71,7 @@ $heading-font-size-small-win: 16px;
 $normal-font-size-win: 11pt;
 $small-font-size-win: 10.5pt;
 $small-font-line-height-win: 18pt;
-$small-font-letter-spacing-win: 0.25px;
+$small-font-letter-spacing-win: .2px;
 
 /*
  * Scalars
