--- a/Styles/_shared.scss
+++ b/Styles/_shared.scss
@@ -12,7 +12,7 @@ $primary-text-color: #FFFFFF;
 $secondary-text-color: #848D95;
 
 $accent-color:#E3EBEC;
-$accent-light-color: #EFEFEF;
+$accent-light-color: #F6FCFB;
 $accent-highlight-color: mix($accent-light-color, white, 40%);
 $accent-text-color: #127191;
 
@@ -65,8 +65,8 @@ $background-font: Arial;
 
 $title-font-size-win: 13pt;
 $navigation-font-size-win: 11pt;
-$heading-font-size-large-win: 13.5pt;
-$heading-font-size-medium-win: 13.5pt;
+$heading-font-size-large-win: 14pt;
+$heading-font-size-medium-win: 13pt;
 $heading-font-size-small-win: 16px;
 $normal-font-size-win: 11pt;
 $small-font-size-win: 10.5pt;
