--- a/Styles/_shared.scss
+++ b/Styles/_shared.scss
@@ -16,6 +16,7 @@ $accent-light-color: #F6FCFB;
 $accent-highlight-color: mix($accent-light-color, white, 40%);
 $accent-text-color: #127191;
 
+$foreground-color: #333333;
 $background-color: #FFFFFF;
 $border-color: lightgray;
 $selection-color: #C3C3C3;
