Font sizes on Mac

--- a/Views/News/Index.cshtml
+++ b/Views/News/Index.cshtml
@@ -59,7 +59,7 @@
 
     <!-- Story loading indicator -->
     <p data-ng-show="news.loading[@story.id]">
-        <span class="placeholder">[ loading... ]</span>
+        <span class="tag">[ loading... ]</span>
     </p>
 
     <!-- Story content -->
