--- a/Styles/_shared.scss
+++ b/Styles/_shared.scss
@@ -47,16 +47,16 @@ $title-font-weight: normal;
 /* Helvetica Neue is available only on Mac */
 /* Calibri is available only on PC */
 $heading-font: "Open Sans", "Helvetica Neue", Calibri, sans-serif;
-$heading-font-size-large: 13pt;
-$heading-font-size-medium: 11.5pt;
-$heading-font-size-small: 10pt;
+$heading-font-size-large: 13.5pt;
+$heading-font-size-medium: 13pt;
+$heading-font-size-small: 12pt;
 
 $normal-font: "Open Sans", "-apple-system", BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif;
-$normal-font-size: 10pt;
+$normal-font-size: 11pt;
 $navigation-font-size: 10pt;
 
-$small-font: "-apple-system", BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif;
-$small-font-size: 9pt;
+$small-font: Verdana, sans-serif;
+$small-font-size: 9.5pt;
 $small-font-line-height: 17pt;
 $small-font-letter-spacing: 0;
 
@@ -68,7 +68,7 @@ $title-font-size-win: 13pt;
 $navigation-font-size-win: 11pt;
 $heading-font-size-large-win: 13.5pt;
 $heading-font-size-medium-win: 13pt;
-$heading-font-size-small-win: 16px;
+$heading-font-size-small-win: 12pt;
 $normal-font-size-win: 11pt;
 $small-font-size-win: 10.5pt;
 $small-font-line-height-win: 18pt;
