--- a/Styles/_shared.scss
+++ b/Styles/_shared.scss
@@ -12,8 +12,8 @@ $primary-text-color: #FFFFFF;
 $secondary-text-color: #848D95;
 
 $accent-color:#E3EBEC;
-$accent-light-color: #F6FCFB;
-$accent-highlight-color: mix($accent-light-color, white, 40%);
+$accent-light-color: #F6F6F6;
+$accent-highlight-color: mix($accent-light-color, white, 45%);
 $accent-text-color: #127191;
 
 $foreground-color: #333333;
