Integrate cancel icon

--- a/Views/Shared/Popup.cshtml
+++ b/Views/Shared/Popup.cshtml
@@ -83,7 +83,7 @@
             data-primary>
             <icon
                 class="icon-button"
-                data-src="../../images/banner.svg#close"
+                data-src="../../images/banner.svg#cancel"
                 data-width="10"
                 data-height="10">
             </icon>
