--- a/Views/Shared/Register.cshtml
+++ b/Views/Shared/Register.cshtml
@@ -48,8 +48,8 @@
         tabindex="2"
         onclick="registration.submit()"
         data-primary>
-        <icon class="icon-button"
-            data-src="../../images/banner.svg#submit"
+        <icon class="icon-button icon-button-offset"
+            data-src="../../images/banner.svg#register"
             data-width="10"
             data-height="10">
         </icon>
