Fix #15 Integrate loading bar

--- a/Styles/_media.desktop.scss
+++ b/Styles/_media.desktop.scss
@@ -1247,3 +1247,8 @@ a.author:hover
     font-size: $normal-font-size;
     overflow: hidden;
 }
+
+#loading-bar-spinner .spinner-icon
+{
+    display: none;
+}
