--- a/Views/Shared/Popup.cshtml
+++ b/Views/Shared/Popup.cshtml
@@ -61,6 +61,7 @@
             <script type="text/javascript" src="~/Scripts/app/services/loginService.js"></script>
             <script type="text/javascript" src="~/Scripts/app/services/render2dService.js"></script>
             <script type="text/javascript" src="~/Scripts/app/services/svgService.js"></script>
+            <script type="text/javascript" src="~/Scripts/angular-loading-bar/build/loading-bar.js"></script>
         </environment>
         
         <environment names="Staging,Production">
