Kill letter spacing on PC, looks horrible

--- a/Styles/_shared.scss
+++ b/Styles/_shared.scss
@@ -72,7 +72,7 @@ $heading-font-size-small-win: 12pt;
 $normal-font-size-win: 11pt;
 $small-font-size-win: 10.5pt;
 $small-font-line-height-win: 18pt;
-$small-font-letter-spacing-win: .2px;
+$small-font-letter-spacing-win: 0;
 
 /*
  * Scalars
