Tag fonts on PC

--- a/Styles/_media.desktop.scss
+++ b/Styles/_media.desktop.scss
@@ -287,7 +287,6 @@ a.author:hover
     color: $primary-text-color;
     background: $primary-color;
     font-size: $small-font-size;
-    letter-spacing: $small-font-letter-spacing;
     padding: 0;
     border: $border-thickness solid $primary-dark-color;
     box-shadow: $border-thickness $border-thickness 0 $primary-light-color inset;
@@ -300,7 +299,6 @@ a.author:hover
 .os-win .button-primary
 {
     font-size: $small-font-size-win;
-    letter-spacing: $small-font-letter-spacing-win;
 }
 
 .button-primary:before
@@ -591,13 +589,11 @@ a.author:hover
     border: none;
     font-family: $small-font;
     font-size: $small-font-size;
-    letter-spacing: $small-font-letter-spacing;
 }
 
 .os-win .button-inline
 {
     font-size: $small-font-size-win;
-    letter-spacing: $small-font-letter-spacing-win;
 }
 
 .button-secondary
@@ -768,7 +764,6 @@ a.author:hover
     color: $accent-text-color;
     background: $accent-color;
     font-size: $small-font-size;
-    letter-spacing: $small-font-letter-spacing;
     text-decoration: none;
     line-height: $small-font-size;
     margin-left: 2pt;
@@ -787,7 +782,7 @@ a.author:hover
     padding-left: 8pt;
     padding-right: 7pt;
     font-size: $small-font-size-win;
-    letter-spacing: $small-font-letter-spacing-win;
+    line-height: $small-font-size-win - 1.5;
 }
 
 .ie .tag
@@ -844,7 +839,6 @@ a.author:hover
 {
     font-family: $small-font;
     font-size: $small-font-size;
-    letter-spacing: $small-font-letter-spacing;
     color: $secondary-text-color;
     margin-top: -6pt;
     line-height: $small-font-line-height;
@@ -854,7 +848,6 @@ a.author:hover
 {
     font-size: $small-font-size-win;
     line-height: $small-font-line-height-win;
-    letter-spacing: $small-font-letter-spacing-win;
 }
 
 .article
@@ -929,14 +922,12 @@ a.author:hover
     margin-left: 1.5em;
     font-family: $small-font;
     font-size: $small-font-size;
-    letter-spacing: $small-font-letter-spacing;
     padding-bottom: 0;
 }
 
 .os-win .comments
 {
     font-size: $small-font-size-win;
-    letter-spacing: $small-font-letter-spacing-win;
 }
 
 .comments-header
@@ -1136,8 +1127,7 @@ a.author:hover
 .form-input
 {
     font-family: $small-font;
-    font-size: $small-font-size;
-    letter-spacing: $small-font-letter-spacing;
+    font-size: $small-font-size;;
     padding-top: $border-thickness * 3;
     padding-left: $border-thickness * 4;
     padding-right: $border-thickness * 4;
@@ -1152,7 +1142,6 @@ a.author:hover
 .os-win .form-input
 {
     font-size: $small-font-size-win;
-    letter-spacing: $small-font-letter-spacing-win;
 }
 
 .form-input:focus
@@ -1166,7 +1155,6 @@ a.author:hover
     display: none;
     font-family: $small-font;
     font-size: $small-font-size;
-    letter-spacing: $small-font-letter-spacing;
     white-space: pre-wrap;
     word-wrap: break-word;
     padding-top: $border-thickness * 3;
@@ -1180,7 +1168,6 @@ a.author:hover
 .os-win .form-input-resizer
 {
     font-size: $small-font-size-win;
-    letter-spacing: $small-font-letter-spacing-win;
 }
 
 .os-win
