--- a/Styles/_shared.scss
+++ b/Styles/_shared.scss
@@ -55,10 +55,9 @@ $normal-font: "Open Sans", "-apple-system", BlinkMacSystemFont, "Segoe UI", Helv
 $normal-font-size: 11pt;
 $navigation-font-size: 10pt;
 
-$small-font: Verdana, sans-serif;
-$small-font-size: 9.5pt;
+$small-font: "Segoe UI", Verdana, sans-serif;
+$small-font-size: 11pt;
 $small-font-line-height: 17pt;
-$small-font-letter-spacing: 0;
 
 $fallback-font: sans-serif;
 
