Fix metadata font size on Mac

--- a/Styles/_media.desktop.scss
+++ b/Styles/_media.desktop.scss
@@ -1174,7 +1174,7 @@ a.author:hover
 .form-input
 {
     font-family: $small-font;
-    font-size: $small-font-size;;
+    font-size: $small-font-size;
     padding-top: $border-thickness * 3;
     padding-left: $border-thickness * 4;
     padding-right: $border-thickness * 4;
