--- a/Styles/_shared.scss
+++ b/Styles/_shared.scss
@@ -14,6 +14,7 @@ $secondary-text-color: #848D95;
 $accent-color:#E3EBEC;
 $accent-light-color: #F6F6F6;
 $accent-highlight-color: mix($accent-light-color, white, 45%);
+$accent-hover-color: #D7DFE0;
 $accent-text-color: #127191;
 
 $foreground-color: #333333;
