--- a/Styles/_shared.scss
+++ b/Styles/_shared.scss
@@ -14,6 +14,7 @@ $secondary-text-color: #848D95;
 $accent-color:#E3EBEC;
 $accent-light-color: #F6F6F6;
 $accent-highlight-color: mix($accent-light-color, white, 45%);
+$accent-hover-color: #D7DFE0;
 $accent-text-color: #127191;
 
 $foreground-color: #333333;
@@ -52,11 +53,11 @@ $heading-font-size-medium: 13pt;
 $heading-font-size-small: 12pt;
 
 $normal-font: "Open Sans", "-apple-system", BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif;
-$normal-font-size: 11pt;
+$normal-font-size: 11.5pt;
 $navigation-font-size: 10pt;
 
 $small-font: "Segoe UI", Verdana, sans-serif;
-$small-font-size: 9.5pt;
+$small-font-size: 10pt;
 $small-font-line-height: 17pt;
 
 $fallback-font: sans-serif;
