Views icon to text

--- a/Views/News/Index.cshtml
+++ b/Views/News/Index.cshtml
@@ -47,11 +47,7 @@
         <span class="metadata-group">
             <!-- Impressions -->
             <span class="metadata-indicator">
-                <icon class="metadata-icon metadata-icon-readonly"
-                    data-src="images/banner.svg#view"
-                    data-width="16"
-                    data-height="16">
-                </icon>
+                <span class="metadata-icon-text">&#xF0E4;</span>
                 <span class="metadata-indicator-content">
                     @story.views
                 </span>
