--- a/Styles/_media.desktop.scss
+++ b/Styles/_media.desktop.scss
@@ -903,6 +903,19 @@ a.author:hover
     stroke: $primary-light-color;
 }
 
+.metadata-icon-text
+{
+    position: relative;
+    font-family: "Wingdings";
+    font-size: $small-font-size + 2;
+    top: 2px;
+}
+
+.os-win .metadata-icon-text
+{
+    font-size: $small-font-size-win + 2;
+}
+
 .article
 {
     border-bottom: $border-thickness dotted $shadow-light-color;
