--- a/Views/News/Index.cshtml
+++ b/Views/News/Index.cshtml
@@ -93,39 +93,54 @@
     </p>
 
     <!-- Story loading error -->
-    <error data-ng-show="news.error[@story.id]"
+    <error data-ng-show="news.error[@storyId]"
         data-operation="'load news story'"
-        data-code="news.error[@story.id].status"
-        data-message="news.error[@story.id].statusText">
+        data-code="news.error[@storyId].status"
+        data-message="news.error[@storyId].statusText">
     </error>
 
     <!-- Story loading indicator -->
-    <p data-ng-show="news.loading[@story.id]">
+    <p data-ng-show="news.loading[@storyId]">
         <span class="tag">[ loading... ]</span>
     </p>
 
     <!-- Story content -->
     <markdown class="article-content"
-        data-ng-init="news.loadStory(@story.id)"
-        data-ignore="">{{news[@story.id]}}</markdown>
+        data-ng-init="news.loadStory(@storyId)"
+        data-ignore="">{{news[@storyId]}}</markdown>
     
     <!-- Story comments -->
-    <div class="comments" data-ng-init="news.loadComments(@story.id)">
-        <span class="metadata" data-ng-show="news.comments[@story.id].length">
+    <div class="comments"
+        data-ng-init="news.loadComments(@storyId)">
+        <span class="metadata"
+            data-ng-show="news.comments[@storyId].length">
             <!-- Comments heading -->
             <p class="comments-header">
-                [<span class="attention-inline">{{news.comments[@story.id].length}}</span>] Comments
+                [<span class="attention-inline">{{news.comments[@storyId].length}}</span>] Comments
             </p>
 
             <!-- Story comment -->
-            <div class="comment-group" data-ng-repeat="comment in news.comments[@story.id]">
-                <span class="comment-vote" data-ng-class="{'comment-vote-readonly': comment.readOnly}">
-                    <span id="#vote-{{comment.id}}" class="vote-content">{{comment.votes}}</span>
+            <div class="comment-group"
+                data-ng-repeat="comment in news.comments[@storyId] | orderBy:'-votes'">
+                <!-- Comment votes -->
+                <span class="comment-vote"
+                    data-ng-class="{'comment-vote-readonly': comment.votesReadOnly || !news.user}">
+                    <!-- Votes -->
+                    <span class="vote-content"
+                        data-ng-class="{'vote-default': comment.votes == 0}">
+                        {{comment.votes}}
+                    </span>
+
+                    <!-- Upvote -->
                     <span class="metadata-icon-text button-vote upvote"
                         data-ng-click="news.upVote(@storyId, comment.id)">&#xF035;</span>
+                    
+                    <!-- Downvote -->
                     <span class="metadata-icon-text button-vote downvote"
                         data-ng-click="news.downVote(@storyId, comment.id)">&#xF036;</span>
                 </span>
+
+                <!-- Comment body -->
                 <p class="comment" data-ng-class="{'comment-official': comment.author === 'zero'}">
                     <span class="metadata">
                         &nbsp;// <a class="author">{{comment.author}}</a> {{comment.date}}:
@@ -137,13 +152,13 @@
 
         <!-- Add comment button -->
         <button class="button-inline top-margin"
-            data-ng-class="{'button-inline-toggled': news.addingComment[@story.id]}"
-            data-ng-click="news.addingComment['@story.id'] = !news.addingComment['@story.id']">
+            data-ng-class="{'button-inline-toggled': news.addingComment[@storyId]}"
+            data-ng-click="news.addingComment['@storyId'] = !news.addingComment['@storyId']">
             + comment
         </button>
 
         <!-- Login providers -->
-        <span data-ng-show="!news.user && news.addingComment[@story.id]">
+        <span data-ng-show="!news.user && news.addingComment[@storyId]">
         @{
             bool first = true;
 
@@ -178,20 +193,20 @@
         }
         </span>
 
-        <div class="comment-form" data-ng-show="news.addingComment[@story.id]">
+        <div class="comment-form" data-ng-show="news.addingComment[@storyId]">
             <!-- Comments error -->
             <error class="comment-error"
-                data-ng-show="news.commentError[@story.id]"
-                data-operation="news.commentOperation[@story.id]"
-                data-error="news.commentError[@story.id]"
-                data-code="news.commentError[@story.id].status"
-                data-message="news.commentError[@story.id].statusText">
+                data-ng-show="news.commentError[@storyId]"
+                data-operation="news.commentOperation[@storyId]"
+                data-error="news.commentError[@storyId]"
+                data-code="news.commentError[@storyId].status"
+                data-message="news.commentError[@storyId].statusText">
             </error>
 
             <!-- Submit button -->
             <button class="button-right"
                 data-primary
-                data-ng-click="news.addComment(@story.id)">
+                data-ng-click="news.addComment(@storyId)">
                 <icon class="icon-button"
                     data-src="images/banner.svg#submit"
                     data-width="10"
@@ -207,7 +222,7 @@
             <div class="form-group">
                 <textarea id="comment-@storyId"
                     class="form-input comment-input full-width"
-                    data-ng-model="news.newComment[@story.id]"
+                    data-ng-model="news.newComment[@storyId]"
                     data-ng-init="news.inputResizeFactory('#comment-@storyId')"
                     placeholder="Leave a comment"
                     rows="1">
